RESOLVED FIXED98850
Sub-fields in input[type=time] should not be focusable if the input is disabled or read-only
https://bugs.webkit.org/show_bug.cgi?id=98850
Summary Sub-fields in input[type=time] should not be focusable if the input is disabl...
Kent Tamura
Reported 2012-10-09 21:21:30 PDT
Sub-fields in input[type=time] should not be focusable if the input is disabled or read-only
Attachments
Patch (8.81 KB, patch)
2012-10-09 21:32 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2012-10-09 21:32:38 PDT
Kentaro Hara
Comment 2 2012-10-09 21:37:49 PDT
Comment on attachment 167912 [details] Patch OK
Kent Tamura
Comment 3 2012-10-09 21:39:06 PDT
Comment on attachment 167912 [details] Patch Thanks you for very quick review!
WebKit Review Bot
Comment 4 2012-10-09 22:20:32 PDT
Comment on attachment 167912 [details] Patch Clearing flags on attachment: 167912 Committed r130848: <http://trac.webkit.org/changeset/130848>
WebKit Review Bot
Comment 5 2012-10-09 22:20:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.