Sub-fields in input[type=time] should not be focusable if the input is disabled or read-only https://bugs.webkit.org/show_bug.cgi?id=98850

Reviewed by Kentaro Hara.

Source/WebCore:

Covered by additional test cases of
time-multiple-fields/time-multiple-fields-keyboard-events.html and
time-multiple-fields/time-multiple-fields-mouse-events.html.

* html/shadow/DateTimeFieldElement.h:
(FieldOwner): Add isFieldOwnerDisabledOrReadOnly.
* html/shadow/DateTimeFieldElement.cpp:
(WebCore::DateTimeFieldElement::isFocusable):
Check isFieldOwnerDisabledOrReadOnly, and calls HTMLElement::isFocusable()
just in case.
* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditElement::isFieldOwnerDisabledOrReadOnly): Added.
* html/shadow/DateTimeEditElement.h:
(DateTimeEditElement): Declare isFieldOwnerDisabledOrReadOnly.

LayoutTests:

* fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events-expected.txt:
* fast/forms/time-multiple-fields/time-multiple-fields-keyboard-events.html:
* fast/forms/time-multiple-fields/time-multiple-fields-mouse-events-expected.txt:
* fast/forms/time-multiple-fields/time-multiple-fields-mouse-events.html:


Canonical link: https://commits.webkit.org/116832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130848 268f45cc-cd09-0410-ab3c-d52691b4dbfc